recipes-extended/iptables/iptables/iptables.rules
# Generated by iptables-save v1.8.10 on Wed Dec 24 11:06:51 2025
*mangle
:PREROUTING ACCEPT [2310:1124371]
:INPUT ACCEPT [2302:1120787]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2087:1186615]
:POSTROUTING ACCEPT [2073:1184633]
COMMIT
# Completed on Wed Dec 24 11:06:51 2025
# Generated by iptables-save v1.8.10 on Wed Dec 24 11:06:51 2025
*nat
:PREROUTING ACCEPT [56:10782]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [47:4222]
:POSTROUTING ACCEPT [33:2240]
COMMIT
# Completed on Wed Dec 24 11:06:51 2025
# Generated by iptables-save v1.8.10 on Wed Dec 24 11:06:51 2025
*filter
:INPUT DROP [50:7278]
:FORWARD DROP [0:0]
:OUTPUT DROP [14:1982]
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW -m limit --limit 3/min -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -m limit --limit 1/sec -j ACCEPT
-A INPUT -p udp -m udp --sport 67 --dport 68 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 123 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A OUTPUT -p udp -m udp --sport 68 --dport 67 -j ACCEPT
-A OUTPUT -m owner --uid-owner tor -j ACCEPT
COMMIT
# Completed on Wed Dec 24 11:06:51 2025
